More sankey playing

--- a/sankey/sankey.html
+++ b/sankey/sankey.html
@@ -2,4 +2,6 @@
 <svg width="1560" height="800"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="https://unpkg.com/d3-sankey@0"></script>
-<script  src="sankey.js"></script>
+<script src="hero_teams.js"></script>
+<script src="avengers.js"></script>
+<script src="sankey.js"></script>
