--- a/sankey/sankey.html
+++ b/sankey/sankey.html
@@ -3,5 +3,5 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="https://unpkg.com/d3-sankey@0"></script>
 <script src="hero_teams.js"></script>
-<script src="avengers.js"></script>
+<script src="justice.js"></script>
 <script src="sankey.js"></script>
